# fadi001-CS100_SoftwareConstruction_Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
header/: listelements.hpp  sublist.hpp  task.hpp
mocks/: mock_func.hpp
source/: main.cpp  sublist.cpp  task.cpp
tests/: sublist_copy_test.hpp  sublist_task_copy_test.hpp  test.cpp  test_add_rdudh001.hpp  test_add_sort_rdudh001.hpp  test_find_rdudh001.hpp  test_getters_setters_rdudh001.hpp  test_mark_complete_rdudh001.hpp  test_print_rdudh001.hpp  test_remove_rdudh001.hpp  test_sort_rdudh001.hpp  test_taskdesc_aklee98.cpp  test_taskduedate_aklee98.cpp  testing_print_after_operations.hpp
